--- a/index.html
+++ b/index.html
@@ -6,9 +6,38 @@
         <title>Foundation | Welcome</title>
         <link rel="stylesheet" href="css/foundation.css" />
         <link rel="stylesheet" href="css/core.css" />
-        <script src="js/modernizr.js"></script>
     </head>
     <body>
-
+    <div class="row">
+        <div class="small-12 medium-12 large-12 columns text-center">
+            <h1> test header </h1>
+            <br/>
+            <br/>
+            <h2> header 2 </h2>
+        </div>
+    </div>
+    <ul class="faceslider">
+        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64" /></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+    </ul>
+    <script src="js/jquery.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script src="js/modernizr.js"></script>
     </body>
 </html>
