--- a/index.html
+++ b/index.html
@@ -8,36 +8,108 @@
         <link rel="stylesheet" href="css/core.css" />
     </head>
     <body>
-    <div class="row">
-        <div class="small-12 medium-12 large-12 columns text-center">
-            <h1> test header </h1>
-            <br/>
-            <br/>
-            <h2> header 2 </h2>
-        </div>
+    <div class="clearfix"></div>
+    <div class="headertext center">
+        <h1 class="headline">Building Places That Inspire<span>.</span></h1>
+        <h3 class="tagline">Washington, DC</h3>
     </div>
-    <ul class="faceslider">
-        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64" /></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-        <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-    </ul>
+    <div class="headerimg" data-stellar-background-ratio="0.5"></div>
+    <div class="menu">
+        <nav class="top-bar" data-topbar>
+            <ul class="title-area">
+                <li class="name">
+                    <h1><a href="#">My Site</a></h1>
+                </li>
+                <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
+            </ul>
+
+            <section class="top-bar-section">
+                <!-- Right Nav Section -->
+                <ul class="right">
+                    <li class="active"><a href="#">Right Button Active</a></li>
+                    <li class="has-dropdown">
+                        <a href="#">Right Button Dropdown</a>
+                        <ul class="dropdown">
+                            <li><a href="#">First link in dropdown</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <!-- Left Nav Section -->
+                <ul class="left">
+                    <li><a href="#">Left Nav Button</a></li>
+                </ul>
+            </section>
+        </nav>
+    </div>
+    <div class="content">
+        <ul class="faceslider">
+            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64" /></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
+            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
+        </ul>
+    </div>
     <script src="js/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="js/modernizr.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script>
+        $(document).foundation();
+        var windowHeight,stickyHeight,newHeight;
+        function refreshStellar() {
+            $(window).stellar({
+                verticalScrolling: true,
+                horizontalScrolling: false
+            });
+            $(window).data('plugin_stellar').destroy();
+            $(window).data('plugin_stellar').init();
+        }
+        function resizeFold() {
+            windowHeight = $(window).height();
+            stickyHeight = getStickyHeight();
+
+            newHeight = windowHeight - stickyHeight;
+            if (newHeight < 350) {
+                newHeight = 350;
+            }
+            $('.headerimg').css({ height: newHeight });
+        }
+
+        function getStickyHeight() {
+            return 45;
+        }
+
+        $( window ).resize(function() {
+            refreshStellar();
+            resizeFold();
+        });
+
+        document.onscroll = function(){
+            if ($(window).scrollTop() >= newHeight) {
+                $('.menu').addClass('fixed');
+                $('.content').addClass('menuoffset');
+            } else {
+                $('.menu').removeClass('fixed');
+                $('.content').removeClass('menuoffset');
+            }
+        }
+        refreshStellar();
+        resizeFold();
+    </script>
     </body>
 </html>
