add fontawesome + font changes

--- a/index.html
+++ b/index.html
@@ -7,58 +7,107 @@
         <link rel="stylesheet" href="css/foundation.css" />
         <link rel="stylesheet" href="css/core.css" />
         <link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="css/font-awesome.min.css"/>
     </head>
     <body>
-    <div class="clearfix"></div>
-    <div class="outerheader">
-        <div class="headertext center">
-            <img src="img/logo.png"/>
-            <h1 class="headline">insorum<span>.com</span></h1>
+    <div class="off-canvas-wrap">
+        <div class="inner-wrap">
+            <div class="outerheader">
+                <div class="headertext center">
+                    <img src="img/logo.png"/>
+                    <h1 class="headline">insorum<span>.com</span></h1>
+                </div>
+            </div>
+            <!-- Off Canvas Menu -->
+            <aside class="right-off-canvas-menu">
+                <!-- whatever you want goes here -->
+                <ul>
+                    <li><a href="#">Item 1</a></li>
+                    ...
+                </ul>
+            </aside>
+            <!-- close the off-canvas menu -->
+            <a class="exit-off-canvas"></a>
+            <div class="headerimg" data-stellar-background-ratio="0.5"></div>
+            <div class="menu">
+                <nav class="top-bar" data-topbar>
+                    <ul class="title-area">
+                        <li class="name">
+                            <h1><a href="#"><b>Insorum</b></a></h1>
+                        </li>
+                    </ul>
+                    <section class="top-bar-section">
+                        <ul class="right">
+                            <li><a class="right-off-canvas-toggle" href="#"><i class="fa fa-question-circle"></i></a></li>
+                        </ul>
+                    </section>
+                </nav>
+            </div>
         </div>
     </div>
-    <div class="headerimg" data-stellar-background-ratio="0.5"></div>
-    <div class="menu">
-        <nav class="top-bar" data-topbar>
-            <ul class="title-area">
-                <li class="name">
-                    <h1><a href="#">Insorum</a></h1>
-                </li>
-
-            </ul>
-
-            <section class="top-bar-section">
-                <!-- Right Nav Section -->
-                <ul class="right">
-                    <li class="menu-icon"><a href="#">Menu</a></li>
-                </ul>
-
-                <!-- Left Nav Section -->
-                <ul class="left">
-                </ul>
-            </section>
-        </nav>
-    </div>
     <div class="content">
-        <ul class="faceslider">
-            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64" /></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/292929/e3e3e3" width="64" height="64"/></li>
-            <li><img src="http://dummyimage.com/64x64.jpg/29ae29/e3e3e3" width="64" height="64"/></li>
-        </ul>
+        <div class="faceslider">
+            <img src="http://mc-heads.net/avatar/Eluinhost"/>
+            <img src="http://mc-heads.net/avatar/sonmica"/>
+            <img src="http://mc-heads.net/avatar/Loryen"/>
+            <img src="http://mc-heads.net/avatar/CX_Flake"/>
+            <img src="http://mc-heads.net/avatar/jutlanduk"/>
+            <img src="http://mc-heads.net/avatar/Fuzzboxx"/>
+            <img src="http://mc-heads.net/avatar/dracomage"/>
+            <img src="http://mc-heads.net/avatar/mjlaukala"/>
+            <img src="http://mc-heads.net/avatar/zaran"/>
+            <img src="http://mc-heads.net/avatar/Eluinhost"/>
+            <img src="http://mc-heads.net/avatar/sonmica"/>
+            <img src="http://mc-heads.net/avatar/Loryen"/>
+            <img src="http://mc-heads.net/avatar/CX_Flake"/>
+            <img src="http://mc-heads.net/avatar/jutlanduk"/>
+            <img src="http://mc-heads.net/avatar/Fuzzboxx"/>
+            <img src="http://mc-heads.net/avatar/dracomage"/>
+            <img src="http://mc-heads.net/avatar/mjlaukala"/>
+            <img src="http://mc-heads.net/avatar/zaran"/>
+            <img src="http://mc-heads.net/avatar/Eluinhost"/>
+            <img src="http://mc-heads.net/avatar/sonmica"/>
+            <img src="http://mc-heads.net/avatar/Loryen"/>
+            <img src="http://mc-heads.net/avatar/CX_Flake"/>
+            <img src="http://mc-heads.net/avatar/jutlanduk"/>
+            <img src="http://mc-heads.net/avatar/Fuzzboxx"/>
+            <img src="http://mc-heads.net/avatar/dracomage"/>
+            <img src="http://mc-heads.net/avatar/mjlaukala"/>
+            <img src="http://mc-heads.net/avatar/zaran"/>
+            <img src="http://mc-heads.net/avatar/Eluinhost"/>
+            <img src="http://mc-heads.net/avatar/sonmica"/>
+            <img src="http://mc-heads.net/avatar/Loryen"/>
+            <img src="http://mc-heads.net/avatar/CX_Flake"/>
+            <img src="http://mc-heads.net/avatar/jutlanduk"/>
+            <img src="http://mc-heads.net/avatar/Fuzzboxx"/>
+            <img src="http://mc-heads.net/avatar/dracomage"/>
+            <img src="http://mc-heads.net/avatar/mjlaukala"/>
+            <img src="http://mc-heads.net/avatar/zaran"/>
+        </div>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
+        <h1>Content</h1>
+        <br/>
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
