--- a/index.html
+++ b/index.html
@@ -46,44 +46,26 @@
         </div>
     </div>
     <div class="content">
-        <div class="faceslider">
-            <img src="http://mc-heads.net/avatar/Eluinhost"/>
-            <img src="http://mc-heads.net/avatar/sonmica"/>
-            <img src="http://mc-heads.net/avatar/Loryen"/>
-            <img src="http://mc-heads.net/avatar/CX_Flake"/>
-            <img src="http://mc-heads.net/avatar/jutlanduk"/>
-            <img src="http://mc-heads.net/avatar/Fuzzboxx"/>
-            <img src="http://mc-heads.net/avatar/dracomage"/>
-            <img src="http://mc-heads.net/avatar/mjlaukala"/>
-            <img src="http://mc-heads.net/avatar/zaran"/>
-            <img src="http://mc-heads.net/avatar/Eluinhost"/>
-            <img src="http://mc-heads.net/avatar/sonmica"/>
-            <img src="http://mc-heads.net/avatar/Loryen"/>
-            <img src="http://mc-heads.net/avatar/CX_Flake"/>
-            <img src="http://mc-heads.net/avatar/jutlanduk"/>
-            <img src="http://mc-heads.net/avatar/Fuzzboxx"/>
-            <img src="http://mc-heads.net/avatar/dracomage"/>
-            <img src="http://mc-heads.net/avatar/mjlaukala"/>
-            <img src="http://mc-heads.net/avatar/zaran"/>
-            <img src="http://mc-heads.net/avatar/Eluinhost"/>
-            <img src="http://mc-heads.net/avatar/sonmica"/>
-            <img src="http://mc-heads.net/avatar/Loryen"/>
-            <img src="http://mc-heads.net/avatar/CX_Flake"/>
-            <img src="http://mc-heads.net/avatar/jutlanduk"/>
-            <img src="http://mc-heads.net/avatar/Fuzzboxx"/>
-            <img src="http://mc-heads.net/avatar/dracomage"/>
-            <img src="http://mc-heads.net/avatar/mjlaukala"/>
-            <img src="http://mc-heads.net/avatar/zaran"/>
-            <img src="http://mc-heads.net/avatar/Eluinhost"/>
-            <img src="http://mc-heads.net/avatar/sonmica"/>
-            <img src="http://mc-heads.net/avatar/Loryen"/>
-            <img src="http://mc-heads.net/avatar/CX_Flake"/>
-            <img src="http://mc-heads.net/avatar/jutlanduk"/>
-            <img src="http://mc-heads.net/avatar/Fuzzboxx"/>
-            <img src="http://mc-heads.net/avatar/dracomage"/>
-            <img src="http://mc-heads.net/avatar/mjlaukala"/>
-            <img src="http://mc-heads.net/avatar/zaran"/>
-        </div>
+        <ul class="faceslider">
+            <li><img src="http://mc-heads.net/avatar/Eluinhost"/></li>
+            <li><img src="http://mc-heads.net/avatar/sonmica"/></li>
+            <li><img src="http://mc-heads.net/avatar/Loryen"/></li>
+            <li><img src="http://mc-heads.net/avatar/CX_Flake"/></li>
+            <li><img src="http://mc-heads.net/avatar/jutlanduk"/></li>
+            <li><img src="http://mc-heads.net/avatar/Fuzzboxx"/></li>
+            <li><img src="http://mc-heads.net/avatar/dracomage"/></li>
+            <li><img src="http://mc-heads.net/avatar/mjlaukala"/></li>
+            <li><img src="http://mc-heads.net/avatar/zaran"/></li>
+            <li><img src="http://mc-heads.net/avatar/Eluinhost"/></li>
+            <li><img src="http://mc-heads.net/avatar/sonmica"/></li>
+            <li><img src="http://mc-heads.net/avatar/Loryen"/></li>
+            <li><img src="http://mc-heads.net/avatar/CX_Flake"/></li>
+            <li><img src="http://mc-heads.net/avatar/jutlanduk"/></li>
+            <li><img src="http://mc-heads.net/avatar/Fuzzboxx"/></li>
+            <li><img src="http://mc-heads.net/avatar/dracomage"/></li>
+            <li><img src="http://mc-heads.net/avatar/mjlaukala"/></li>
+            <li><img src="http://mc-heads.net/avatar/zaran"/></li>
+        </ul>
         <h1>Content</h1>
         <br/>
         <h1>Content</h1>
@@ -150,7 +132,7 @@
                 $('.menu').removeClass('fixed');
                 $('.content').removeClass('menuoffset');
             }
-        }
+        };
         refreshStellar();
         resizeFold();
     </script>
