--- a/index.html
+++ b/index.html
@@ -46,26 +46,60 @@
         </div>
     </div>
     <div class="content">
-        <ul class="faceslider">
-            <li><img src="http://mc-heads.net/avatar/Eluinhost"/></li>
-            <li><img src="http://mc-heads.net/avatar/sonmica"/></li>
-            <li><img src="http://mc-heads.net/avatar/Loryen"/></li>
-            <li><img src="http://mc-heads.net/avatar/CX_Flake"/></li>
-            <li><img src="http://mc-heads.net/avatar/jutlanduk"/></li>
-            <li><img src="http://mc-heads.net/avatar/Fuzzboxx"/></li>
-            <li><img src="http://mc-heads.net/avatar/dracomage"/></li>
-            <li><img src="http://mc-heads.net/avatar/mjlaukala"/></li>
-            <li><img src="http://mc-heads.net/avatar/zaran"/></li>
-            <li><img src="http://mc-heads.net/avatar/Eluinhost"/></li>
-            <li><img src="http://mc-heads.net/avatar/sonmica"/></li>
-            <li><img src="http://mc-heads.net/avatar/Loryen"/></li>
-            <li><img src="http://mc-heads.net/avatar/CX_Flake"/></li>
-            <li><img src="http://mc-heads.net/avatar/jutlanduk"/></li>
-            <li><img src="http://mc-heads.net/avatar/Fuzzboxx"/></li>
-            <li><img src="http://mc-heads.net/avatar/dracomage"/></li>
-            <li><img src="http://mc-heads.net/avatar/mjlaukala"/></li>
-            <li><img src="http://mc-heads.net/avatar/zaran"/></li>
-        </ul>
+        <div class="sliderdivouter"><div class="sliderdiv">
+            <ul class="faceslider">
+                <li><img src="http://avatar.publicuhc.com/helm/bergasms"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/loryen"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/prismatic_orchid"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/birdmannom"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/funsong_3"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/sonmica"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/shadoune666"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/exetonline"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/winthermaw"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/dracomage"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/aeam_bill"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/sebastian__w"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/guardaxion"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/dykam"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/zaran"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/joneska88"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/fuzzboxx"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/zxsubzerozxz"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/audicymc"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/golden_kumquat"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/mattdrumz"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/methii"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/eddcase"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/hawkke"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/fairyjuice"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/oobula"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/cx_flake"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/kiinako_"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/firefoxvulpix"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/cold_storage77"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/_blueraspberry_"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/reddyeno5"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/lit_zippo"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/jutlanduk"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/montecarbo"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/ttaylorr"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/kev813"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/ghowden"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/utterback423"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/origamidood"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/mikedanewb"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/butterpaw"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/derpchicken101"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/pinkie31459"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/ripperstevem5"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/brettradsfield"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/mjlaukala"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/alirat"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/ntbama"/></li>
+                <li><img src="http://avatar.publicuhc.com/helm/haruko1"/></li>
+            </ul>
+        </div></div>
         <h1>Content</h1>
         <br/>
         <h1>Content</h1>
@@ -89,12 +123,12 @@
         <h1>Content</h1>
         <br/>
         <h1>Content</h1>
-        <br/>
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="js/modernizr.js"></script>
     <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/jquery.bxslider.min.js"></script>
     <script>
         $(document).foundation();
         var windowHeight,stickyHeight,newHeight;
@@ -116,12 +150,25 @@
         }
 
         function getStickyHeight() {
-            return 45;
+            return 109;
         }
 
         $( window ).resize(function() {
             refreshStellar();
             resizeFold();
+        });
+
+        $('.faceslider').bxSlider({
+            minSlides: 15,
+            maxSlides: 100,
+            slideWidth: 64,
+            slideMargin: 0,
+            ticker: true,
+            speed: 35000,
+            randomStart: true,
+            onSliderLoad: function(){
+                $('.sliderdiv').css("visibility", "visible");
+            }
         });
 
         document.onscroll = function(){
