point to cached minotar

--- a/index.html
+++ b/index.html
@@ -100,29 +100,19 @@
                 <li><img src="http://avatar.publicuhc.com/helm/haruko1"/></li>
             </ul>
         </div></div>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
-        <br/>
-        <h1>Content</h1>
+        <div class="row">
+            <div class="6 columns push-3 lper">
+                <h1>Fuzzboxx | fuzzboxxlp</h1>
+                <div class="flex-video widescreen youtube">
+                    <iframe width="560" height="315" src="//www.youtube.com/embed/videoseries?list=UUR4yPopw5XVEEf1yFjf6_dw" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+        <h1>Sonmica | sonmicalp</h1>
+        <h1>Lit_Zippo | litzippo</h1>
+        <h1>Fairyjuice | Entropiestromstaerke</h1>
+        <h1>MJLaukala | mjlaukala</h1>
+        <h1>Ripperstevem5 | ripperstevem5</h1>
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
