some youtuber bits

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Foundation | Welcome</title>
+        <title>Insorum | Welcome</title>
         <link rel="stylesheet" href="css/foundation.css" />
         <link rel="stylesheet" href="css/core.css" />
         <link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="css/fancybox/jquery.fancybox.css"/>
     </head>
     <body>
     <div class="off-canvas-wrap">
@@ -15,7 +16,7 @@
             <div class="outerheader">
                 <div class="headertext center">
                     <img src="img/logo.png"/>
-                    <h1 class="headline">insorum<span>.com</span></h1>
+                    <h1 class="headline insorum">insorum<span>.com</span></h1>
                 </div>
             </div>
             <!-- Off Canvas Menu -->
@@ -103,62 +104,51 @@
         <section class="pagetitle">
             <div class="row">
                 <div class="12 columns text-center">
-                    <h1>INSORUM<span>.com</span></h1>
+                    <h1 class="insorum-invert">insorum<span>.com</span> Youtubers</h1>
                     <p>
-                        Some text here maybe
+                        <i class="fa fa-arrow-down"></i> Check out some of our youtube channels here. <i class="fa fa-arrow-down"></i>
                     </p>
                 </div>
             </div>
         </section>
-        <div class="youtuber">
-            <div class="fuzzboxx" data-stellar-background-ratio="0.5">
-                <div class="row">
-                    <div class="large-10 columns push-1 lper text-center">
-                        <div class="row">
-                            <div class="large-3 columns">
-                                <h1>Fuzzboxx</h1>
-                                <a href="#"><i class="fa fa-youtube-play"></i> fuzzboxxlp</a>
-                            </div>
-                            <div class="large-9 columns">
-                                <div class="flex-video widescreen youtube">
-                                    <iframe width="560" height="315" src="//www.youtube.com/embed/videoseries?list=UUR4yPopw5XVEEf1yFjf6_dw" frameborder="0" allowfullscreen></iframe>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <section class="all_channels">
+            <div class="small-8 columns small-offset-2">
+                <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
+                    <li>
+                        <a data-tooltip title="Fuzzboxx" class="has-tip various fancybox" href="fuzzboxx.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Fuzzboxx"/></a>
+                    </li>
+                    <li>
+                        <a data-tooltip title="Sonmica" class="has-tip various fancybox" href="sonmica.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/sonmica"/></a>
+                    </li>
+                    <li>
+                        <a data-tooltip title="Lit Zippo" class="has-tip various fancybox" href="litzippo.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Lit_Zippo"/></a>
+                    </li>
+                    <li>
+                        <a data-tooltip title="Fairyjuice" class="has-tip various fancybox" href="fairyjuice.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Fairyjuice"/></a>
+                    </li>
+                    <li>
+                        <a data-tooltip title="Eliunhost" class="has-tip various fancybox" href="eluinhost.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Eluinhost"/></a>
+                    </li>
+                    <li>
+                        <a data-tooltip title="MJLaukala" class="has-tip various fancybox" href="mjlaukala.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/MJLaukala"/></a>
+                    </li>
+                    <li>
+                        <a data-tooltip title="Rippersteve" class="has-tip various fancybox" href="rippersteve.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/rippersteveM5"/></a>
+                    </li>
+                    <li>
+                        <a data-tooltip title="EddCase" class="has-tip various fancybox" href="eddcase.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/EddCase"/></a>
+                    </li>
+
+                </ul>
             </div>
-        </div>
-        <div class="youtuber">
-            <div class="sonmica" data-stellar-background-ratio="0.5">
-                <div class="row">
-                    <div class="large-10 columns push-1 lper text-center">
-                        <div class="row">
-                            <div class="large-3 columns">
-                                <h1>Sonmica</h1>
-                                <a href="#"><i class="fa fa-youtube-play"></i> sonmicalp</a>
-                            </div>
-                            <div class="large-9 columns">
-                                <div class="flex-video widescreen youtube">
-                                    <iframe width="560" height="315" src="//www.youtube.com/embed/videoseries?list=UUlVsPQyUcW7WqhGR4G6Fbkg" frameborder="0" allowfullscreen></iframe>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <h1>Sonmica | sonmicalp</h1>
-        <h1>Lit_Zippo | litzippo</h1>
-        <h1>Fairyjuice | Entropiestromstaerke</h1>
-        <h1>MJLaukala | mjlaukala</h1>
-        <h1>Ripperstevem5 | ripperstevem5</h1>
+        </section>
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="js/modernizr.js"></script>
     <script src="js/jquery.stellar.min.js"></script>
     <script src="js/jquery.bxslider.min.js"></script>
+    <script src="js/jquery.fancybox.js"></script>
     <script>
         $(document).foundation();
         var windowHeight,stickyHeight,newHeight;
@@ -216,6 +206,13 @@
         };
         resizeFold();
         refreshStellar();
+        $(".fancybox").fancybox({
+            type: 'iframe',
+            padding: '0',
+            width: '80%',
+            height: '80%',
+            autoSize: false
+        });
     </script>
     </body>
 </html>
