--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <a data-tooltip title="Sonmica" class="has-tip various fancybox" href="sonmica.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/sonmica"/></a>
                     </li>
                     <li>
-                        <a data-tooltip title="Lit Zippo" class="has-tip various fancybox" href="litzippo.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Lit_Zippo"/></a>
+                        <a data-tooltip title="Lit Zippo" class="has-tip various fancybox" href="lit_zippo.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Lit_Zippo"/></a>
                     </li>
                     <li>
                         <a data-tooltip title="Fairyjuice" class="has-tip various fancybox" href="fairyjuice.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Fairyjuice"/></a>
