--- a/eddcase.html
+++ b/eddcase.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
 </head>
 <body>
-<div class="youtuber fuzzboxx">
+<div class="youtuber eddcase">
     <div class="row">
         <div class="large-10 columns push-1 lper text-center">
             <div class="row">
                 <div class="large-3 columns">
                     <div class="row">
                         <div class="12 columns">
-                            <img src="http://avatar.publicuhc.com/helm/Fuzzboxx"/>
+                            <img src="http://avatar.publicuhc.com/helm/EddCase"/>
                         </div>
                     </div>
                     <div class="row">
                         <div class="12 columns alert-box alert round">
-                            <a href="http://youtube.com/fuzzboxxlp"><i class="fa fa-youtube-play"></i> fuzzboxxlp</a>
+                            <a href="http://youtube.com/EddCase"><i class="fa fa-youtube-play"></i> EddCase</a>
                         </div>
                     </div>
                 </div>
