--- a/sonmica.html
+++ b/sonmica.html
@@ -15,11 +15,19 @@
         <div class="large-10 columns push-1 lper text-center">
             <div class="row">
                 <div class="large-3 columns">
-                    <img src="http://avatar.publicuhc.com/helm/sonmica"/><h1>Sonmica</h1>
-                    <a href="#"><i class="fa fa-youtube-play"></i> sonmicalp</a>
+                    <div class="row">
+                        <div class="12 columns">
+                            <img src="http://avatar.publicuhc.com/helm/sonmica"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="12 columns alert-box alert round">
+                            <a href="http://youtube.com/sonmicalp"><i class="fa fa-youtube-play"></i> sonmicalp</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="large-9 columns">
-                    <blockquote>"Stahhhhp"<cite>Sonmica</cite></blockquote>
+                    <blockquote class="panel">"Staaaaaaaph"<cite>sonmica</cite></blockquote>
                 </div>
             </div>
         </div>
